# sidekick-forge

./: .env.clean  .env.example  .env.template  .gitattributes  .gitignore  AUDIO_FIX_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CLEAN_MIGRATION_SUMMARY.md  CLIENT_DISPLAY_FIX.md  CODE_FREEZE_NOTICE.md  CONTACT_FORM_SETUP_COMPLETE.md  CONTACT_FORM_SETUP_SUMMARY.md  CONTEXT_FIXES_SUMMARY.md  CONTEXT_IMPLEMENTATION_CORRECTED.md  CONTRIBUTING.md  CREATE_GITHUB_RELEASE.md  DASHBOARD_FIX_SUMMARY.md  DASHBOARD_STATUS.md  DEPLOYMENT.md  DEPLOYMENT_QUICKSTART.md  DIVINE_PLAN_RAG_ISSUE_REPORT.md  DOMAIN_MIGRATION.md  Dockerfile  FINAL_CLEANUP_COMPLETE.md  FOR_DEV_AGENT_EMAIL_NOTIFICATIONS.md  FRONTEND_AUDIO_DEBUG_INSTRUCTIONS.md  FRONTEND_INTEGRATION.md  INTEGRATION_SUMMARY.md  KNOWLEDGE_BASE_ISSUE.md  LICENSE  LiveKit-Agent-SDK-Python.txt?rlkey=whyd2r32t1m8x6m76yuevl0p6  MARKETING_DEPLOYMENT_STAGING.md  MARKETING_SITE_DEPLOYMENT.md  MARKETING_SITE_SUMMARY.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  MIGRATION_INSTRUCTIONS.md  MIGRATION_SUMMARY.md  MISSION_CRITICAL_TEST_UPDATES.md  (+162 more)
agent-worker/: generic_agent.py
app/: __init__.py  config.py  constants.py  main.py  main.py.backup_20250726_122305  main_multitenant.py  minimal_main.py  simple_main.py
database/: container_tracking.sql
docker/: Dockerfile  docker-compose.production.yml  requirements.txt
docs/: API.md  DEPLOYMENT.md  MAILJET_SETUP.md  TIERED_ARCHITECTURE_MIGRATION_PLAN.md  adventurer-shared-pool-architecture.md  agent-sync-implementation.md  asana-token-storage.md  client-user-id-audit-summary.md  client_credential_isolation_confirmation.md  container-and-agent-lookup-findings.md  last-chat-analysis.md  livekit-500-error-fix.md  multi-tenant-id-architecture.md  multitenant-livekit-findings.md  perplexity-mcp.md  phase1_implementation_summary.md  phase2_implementation_summary.md  phase3_implementation_summary.md  phase4_implementation_summary.md  phase4_refinements_summary.md  provisioning_worker_plan.md  rag-text-chat-fix-summary.md  (+1 more)
env/: .env
(+648 files in other folders)
